--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   },
   "scripts": {
     "test": "anchor test"
+  },
+  "dependencies": {
+    "@project-serum/anchor": "^0.19.1-beta.1",
+    "@solana/web3.js": "^1.31.0",
+    "assert": "^2.0.0",
+    "child_process": "^1.0.2",
+    "mocha": "^9.1.3"
   }
 }
