--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@project-serum/anchor": "^0.19.1-beta.1",
+    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.31.0",
     "assert": "^2.0.0",
     "child_process": "^1.0.2",
