--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,10 +1,7 @@
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "./throwaway.json"
 
-[programs.localnet]
-puppet = "CduvxgqTSJN3BTAYuMBnGAaN2GvTRGpXypQHKVbyvyoA"
-puppet_master = "42M5ne9JyD7c5DPMxitmHrRytoqrxEmaH4ZZ1RkYouyA"
 
 [scripts]
 test = "yarn run mocha -t 1000000 tests/"
